--- a/OmneFictio.Web/wwwroot/css/index.css
+++ b/OmneFictio.Web/wwwroot/css/index.css
@@ -1,8 +1,39 @@
 /*--------DARK MODE----------*/
+:root {
+  --background-color1: #1D1D1D;
+  --background-color2: #313131;
+  --background-color-hover1:#373737;
+  --background-color-hover2:#4E4E4E;
+  --background-color-hover3:#5e5e5e;
+  --background-color-hover4:#3b3b3b;
+  --background-color-boxshadow1:#31313150;
+  --text-color1: #ffffff;
+  --text-color2:#bababa;
+  --text-color-hover1: #cccccc;
+  --text-color-boxshadow1:#ffffff50;
+  --text-color-boxshadow2:#ffffff70;
+  --searchplaceholder-color: #939393;
+}
+
+.darkmode {
+  --background-color1: #1D1D1D;
+  --background-color2: #313131;
+  --background-color-hover1:#373737;
+  --background-color-hover2:#4E4E4E;
+  --background-color-hover3:#5e5e5e;
+  --background-color-hover4:#3b3b3b;
+  --background-color-boxshadow1:#31313150;
+  --text-color1: #ffffff;
+  --text-color2:#bababa;
+  --text-color-hover1: #cccccc;
+  --text-color-boxshadow1:#ffffff50;
+  --text-color-boxshadow2:#ffffff70;
+}
+
 main {
   display: flex;
   flex-direction: column;
-  color: #ffffff;
+  color: var(--text-color1);
   position: relative;
   padding-top: 4px;
 }
@@ -13,7 +44,7 @@ main {
 }
 .linkgroups .linkgroup_cont {
   width: 100%;
-  background-color: #313131;
+  background-color: var(--background-color2);
   margin-bottom: 10px;
   font-family: "Itim", cursive;
   display: flex;
@@ -75,7 +106,7 @@ main {
 }
 .toppost_groups .tpgroup .post {
   margin-bottom: 12px;
-  background-color: #313131;
+  background-color: var(--background-color2);
   overflow: hidden;
   max-height: 260px;
 }
@@ -105,7 +136,7 @@ main {
 }
 .toppost_groups .tpgroup .post .post-detail .p-header .p-title .p-date {
   margin-left: 6px;
-  color: #bababa;
+  color: var(--text-color2);
   font-size: 0.7rem;
   font-family: "Gudea";
 }
@@ -145,7 +176,7 @@ main {
   transition: color 0.2s ease;
 }
 .toppost_groups .tpgroup .post .post-detail .p-footer .pf-evaluation i:hover {
-  color: #cccccc;
+  color: var(--text-color-hover1);
 }
 .toppost_groups .tpgroup .post .post-detail .p-footer .pf-evaluation .p-likes {
   padding: 0 8px;
@@ -237,9 +268,9 @@ main {
   background-color: #4A8D5D !important;
 }
 .toppost_groups .tpgroup .post .post-menu .pd-right .pd-actions button {
-  color: #ffffff;
+  color: var(--text-color1);
   border-radius: 20px;
-  background-color: #4E4E4E;
+  background-color: var(--background-color-hover2);
   outline: none;
   border: none;
   margin-bottom: 8px;
@@ -247,7 +278,7 @@ main {
   transition: 0.2s ease;
 }
 .toppost_groups .tpgroup .post .post-menu .pd-right .pd-actions button:hover {
-  background-color: #5e5e5e;
+  background-color: var(--background-color-hover3);
 }
 
 @media (min-width: 768px) {
@@ -255,7 +286,7 @@ main {
     padding-top: 20px;
   }
   .linkgroups .linkgroup_cont {
-    background-color: #1D1D1D;
+    background-color: var(--background-color1);
     border-radius: 14px;
     margin-bottom: 16px;
   }
@@ -285,7 +316,7 @@ main {
     width: 47%;
   }
   .toppost_groups > .tpgroup .post {
-    background-color: #1D1D1D !important;
+    background-color: var(--background-color1) !important;
     border-radius: 10px;
   }
 }
