--- a/OmneFictio.Web/wwwroot/css/index.scss
+++ b/OmneFictio.Web/wwwroot/css/index.scss
@@ -3,7 +3,7 @@
 main{
     display: flex;
     flex-direction: column;
-    color: $textcolor;
+    color: var(--text-color1);
     position: relative;
     padding-top: 4px;
 }
@@ -12,7 +12,7 @@ main{
     flex-direction: column;
     .linkgroup_cont{
         width: 100%;
-        background-color: $frontbgcolor;
+        background-color: var(--background-color2);
         margin-bottom: 10px;
         font-family: 'Itim', cursive;
         display: flex;
@@ -74,7 +74,7 @@ main{
         }
         .post{
             margin-bottom: 12px;
-            background-color: $frontbgcolor;
+            background-color: var(--background-color2);
             overflow: hidden;
             max-height: 260px;
             &:last-child{
@@ -100,7 +100,7 @@ main{
                         }
                         .p-date{
                             margin-left: 6px;
-                            color: $textcolor2;
+                            color: var(--text-color2);
                             font-size: 0.7rem;
                             font-family: 'Gudea';
                         }
@@ -124,7 +124,7 @@ main{
                     overflow: hidden;*/
                 }
                 .p-footer{
-                    //color: $textcolor;
+                    //color: var(--text-color1);
                     font-family: 'Itim', cursive;
                     display: flex;
                     flex-direction: row;
@@ -140,7 +140,7 @@ main{
                             cursor: pointer;
                             transition: color 0.2s ease;
                             &:hover{
-                                color: $textcolor_hover1;
+                                color: var(--text-color-hover1);
                             }
                         }
                         .p-likes{
@@ -234,16 +234,16 @@ main{
                             background-color: #4A8D5D !important;
                         }
                         button{
-                            color: $textcolor;
+                            color: var(--text-color1);
                             border-radius: 20px;
-                            background-color: $frontbgcolor_hover2;
+                            background-color: var(--background-color-hover2);
                             outline: none;
                             border: none;
                             margin-bottom: 8px;
                             padding: 2px 10px;
                             transition: 0.2s ease;
                             &:hover{
-                                background-color: $frontbgcolor_hover3;
+                                background-color: var(--background-color-hover3);
                             }
                         }
                     }
@@ -266,7 +266,7 @@ main{
     }
     .linkgroups{
         .linkgroup_cont{
-            background-color: $sitebgcolor;
+            background-color: var(--background-color1);
             border-radius: 14px;
             margin-bottom: 16px;
             > span{
@@ -299,7 +299,7 @@ main{
     .toppost_groups > .tpgroup{
         width: 47%;
         .post{
-            background-color: $sitebgcolor !important;
+            background-color: var(--background-color1) !important;
             border-radius: 10px;
         }
     }
