--- a/OmneFictio.Web/wwwroot/css/theme.scss
+++ b/OmneFictio.Web/wwwroot/css/theme.scss
@@ -1,17 +1,33 @@
 
-/*--------DARK MODE----------*/
-$sitebgcolor: #1D1D1D;
-$frontbgcolor: #313131;
-$textcolor:#ffffff;
-$textcolor2:#bababa;
-$searchplaceholdercolor: #939393;
+:root{
+    --background-color1: #1D1D1D;
+    --background-color2: #313131;
+    --background-color-hover1:#373737;
+    --background-color-hover2:#4E4E4E;
+    --background-color-hover3:#5e5e5e;
+    --background-color-hover4:#3b3b3b;
+    --background-color-boxshadow1:#31313150;
 
-$textcolor_hover1: #cccccc;
-$frontbgcolor_hover1:#373737;
-$frontbgcolor_hover2:#4E4E4E;
-$frontbgcolor_hover3:#5e5e5e;
-$frontbgcolor_hover4:#3b3b3b;
+    --text-color1: #ffffff;
+    --text-color2:#bababa;
+    --text-color-hover1: #cccccc;
+    --text-color-boxshadow1:#ffffff50;
+    --text-color-boxshadow2:#ffffff70;
 
-$textcolor_boxshadow:#ffffff50;
-$textcolor_boxshadow2:#ffffff70;
-$frontbgcolor_boxshadow:#31313150;
+    --searchplaceholder-color: #939393;
+}
+.darkmode{
+    --background-color1: #1D1D1D;
+    --background-color2: #313131;
+    --background-color-hover1:#373737;
+    --background-color-hover2:#4E4E4E;
+    --background-color-hover3:#5e5e5e;
+    --background-color-hover4:#3b3b3b;
+    --background-color-boxshadow1:#31313150;
+
+    --text-color1: #ffffff;
+    --text-color2:#bababa;
+    --text-color-hover1: #cccccc;
+    --text-color-boxshadow1:#ffffff50;
+    --text-color-boxshadow2:#ffffff70;
+}
